crates/deptree-cli/tests/snapshots/python_test__downstream_multiple_roots_max_rank.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
main
pkg_a
pkg_a.module_a
pkg_b.module_b
