crates/deptree-cli/tests/snapshots/python_test__downstream_with_namespace_packages.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    subgraph cluster_pep420_namespace {
        label = "pep420_namespace";
    }
    "normal_pkg.consumer";
    "pep420_namespace.sub_a.module_a";
    "pep420_namespace.sub_b.module_b";
    "normal_pkg.consumer" -> "pep420_namespace.sub_b.module_b";
    "pep420_namespace.sub_a.module_a" -> "normal_pkg.consumer";
    "pep420_namespace.sub_b.module_b" -> "pep420_namespace.sub_a.module_a";
}
