crates/deptree-cli/tests/snapshots/python_test__function_level_imports.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "another_module";
    "base_module";
    "function_imports";
    "function_imports" -> "another_module";
    "function_imports" -> "base_module";
}
