crates/deptree-cli/tests/snapshots/python_test__highlighted_with_scripts.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    // Note: Highlighted nodes are shown with light blue background
    "foo.bar" [fillcolor=lightblue, style=filled];
    "scripts.blah" [shape=box, fillcolor=lightblue, style=filled];
    "scripts.runner" [shape=box];
    "scripts.utils.helper" [shape=box];
    "scripts.blah" -> "foo.bar";
    "scripts.runner" -> "foo.bar";
    "scripts.runner" -> "scripts.utils.helper";
}
