crates/deptree-cli/tests/snapshots/python_test__namespace_grouping_cytoscape_graph_data.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: serialized
---
{
  "nodes": [
    {
      "id": "foo.bar.quux",
      "type": "namespace_group",
      "is_orphan": false,
      "parent": "foo.bar"
    },
    {
      "id": "foo",
      "type": "module",
      "is_orphan": false
    },
    {
      "id": "foo.bar",
      "type": "module",
      "is_orphan": false,
      "parent": "foo"
    },
    {
      "id": "foo.bar.a",
      "type": "module",
      "is_orphan": false,
      "parent": "foo.bar"
    },
    {
      "id": "foo.bar.b",
      "type": "module",
      "is_orphan": false,
      "parent": "foo.bar"
    },
    {
      "id": "foo.bar.quux.c",
      "type": "module",
      "is_orphan": false,
      "parent": "foo.bar.quux"
    },
    {
      "id": "foo.bar.quux.d",
      "type": "module",
      "is_orphan": false,
      "parent": "foo.bar.quux"
    },
    {
      "id": "foo.baz",
      "type": "module",
      "is_orphan": false,
      "parent": "foo"
    },
    {
      "id": "main",
      "type": "module",
      "is_orphan": false
    },
    {
      "id": "scripts.runner",
      "type": "module",
      "is_orphan": false
    }
  ],
  "edges": [
    {
      "source": "foo.bar.b",
      "target": "foo.bar"
    },
    {
      "source": "foo.bar.b",
      "target": "foo.bar.a"
    },
    {
      "source": "foo.bar.quux.c",
      "target": "foo"
    },
    {
      "source": "foo.bar.quux.c",
      "target": "foo.bar"
    },
    {
      "source": "foo.baz",
      "target": "foo.bar.a"
    },
    {
      "source": "main",
      "target": "foo.bar.quux.c"
    },
    {
      "source": "main",
      "target": "foo.bar.quux.d"
    },
    {
      "source": "main",
      "target": "foo.baz"
    },
    {
      "source": "main",
      "target": "scripts.runner"
    },
    {
      "source": "scripts.runner",
      "target": "foo.baz"
    }
  ],
  "config": {
    "include_orphans": false,
    "include_namespaces": false
  }
}
