crates/deptree-cli/tests/snapshots/python_test__namespace_grouping_mermaid_downstream_filtered.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: mermaid_output
---
flowchart TD
    subgraph foo["foo"]
        foo_baz("foo.baz")
        subgraph foo_bar["foo.bar"]
            foo_bar_a("foo.bar.a")
            foo_bar_b("foo.bar.b")
        end
    end
    foo_bar_b("foo.bar.b") --> foo_bar_a("foo.bar.a")
    foo_baz("foo.baz") --> foo_bar_a("foo.bar.a")
    main("main") --> foo_baz("foo.baz")
    main("main") --> scripts_runner("scripts.runner")
    scripts_runner("scripts.runner") --> foo_baz("foo.baz")
